# cgo_learn

./: .gitignore
c2go/: go.mod  main.go
go2c/: CMakeLists.txt  export.go  go.mod  libshare.h  main.cpp  makefile  share.sh
